Fixed comment input alignment and added added style elements to comment section

--- a/style.css
+++ b/style.css
@@ -163,10 +163,13 @@ iframe {
 
 .comment {
 	display: flex;
+	margin-bottom: 1em;
 }
 
 #comment-input {
-	margin: 1.2em 0;
+	margin-top: 1.2em; 
+	align-items: center;
+	
 }
 
 #all-comments {
@@ -179,9 +182,16 @@ iframe {
 
 .reaction a {
 	margin-right: 1em;
+	color: #A0A0A0;
 }
 
 .reaction {
 	margin-bottom: 1em;
 }
+
+.view-replies {
+	color: #0A0A0A;
+	
+}
+
 
